# JARVIS

./: Makefile  README.md  RUNBOOK.md  TICKET_ID.txt  alembic.ini  env.example  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_create_schema.py  0002_add_corporate_actions_unique_index.py  0003_create_trade_day_lock.py
artifacts/backtests/20260204102409/: summary.json
artifacts/backtests/20260204102448/: trades.csv
deploy/docker/: Dockerfile  docker-compose.yml  scheduler_entrypoint.sh
docs/: execution_protocol.md  forward_test.md  governance.md  propfirms.md  runbook.md
scripts/: daily_scan.sh
src/informer/: __main__.py  cli.py
src/informer/backtest/: costs.py  engine.py  io.py  metrics.py  splits.py  strategy.py  validation.py
src/jarvis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: __init__.py  test_backtest.py  test_backtest_warmup.py  test_backtest_warmup_prestarthistory.py  test_charts.py  test_cli.py  test_cli_backtest.py  test_cli_config_check.py  test_cli_decide.py  test_cli_decide_live_preflight.py  test_cli_entrypoint.py  test_cli_features.py  test_cli_health.py  test_cli_packet.py  test_cli_phase3_validation.py  test_cli_qa.py  test_cli_scheduler.py  test_corporate_actions.py  test_daily_scan.py  test_daily_scan_live_notify.py  test_daily_scan_live_preflight.py  test_db_init.py  test_db_smoke.py  test_decide_pipeline.py  test_deploy_drift.py  test_docs_consistency.py  test_features_storage.py  test_forwardtest.py  test_forwardtest_list_outcomes.py  test_forwardtest_log_outcome_entry_and_warning.py  test_forwardtest_log_outcome_run_id.py  test_forwardtest_report_outcomes.py  test_health.py  test_indicators.py  test_live_mode.py  test_llm_policy.py  test_metrics_per_symbol.py  test_notify.py  test_packets.py  test_patterns.py  (+13 more)
(+20 files in other folders)
